discussion/kv_engine/148331/148331_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma wait stats support

Change-Id: Ib0df3a982ba8014a996100e698288a40ea1a0b06

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-16 17:52:29.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-16 18:16:53.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29428/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29428/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34281/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2559): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7700/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7700/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8318/ : FAILURE

Compile error at [2021-03-16T17:55:19.673Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9402/ : FAILURE

Compile error at [2021-03-16T18:09:47.518Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9611/ : FAILURE

Compile error at [2021-03-16T18:11:04.839Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9611/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17165/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6241/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9256/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
